# imgfilter

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.hip
src/: App.cpp  App.hpp  CMakeLists.txt  CanvasWindow.cpp  CanvasWindow.hpp  FilterParams.hpp  FilterParamsWindow.cpp  FilterParamsWindow.hpp  IWindow.hpp  Image.cpp  Image.hpp  ImageFilter.hip  ImageFilter.hpp  ImageFilter_detail.hpp  ImageFilter_internal.hpp  MainWindow.cpp  MainWindow.hpp  PreviewWindow.cpp  PreviewWindow.hpp  ProfilerInfo.cpp  ProfilerInfo.hpp  ProfilerWindow.cpp  ProfilerWindow.hpp  main.hip
src/imagefilter/: CMakeLists.txt  ImageFilter_detail.hpp
src/imagefilter/rocm/: CMakeLists.txt  ImageFilter.hip
src/math/: CMakeLists.txt  vec.hpp
